-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.1.24, 10.0.31
-
Component/s: Compiling, Storage Engine - InnoDB
-
Labels:None
-
Environment:Debian Stretch 32-bit MIPS
Attempting to compile mariadb 10.1.24 on 32-bit MIPS fails with this error:
In file included from /«PKGBUILDDIR»/storage/innobase/lock/lock0wait.cc:29:0:
|
/«PKGBUILDDIR»/storage/innobase/include/srv0mon.h:649:8: error: 'ib_mutex_t' does not name a type
|
extern ib_mutex_t monitor_mutex;
|
^~~~~~~~~~
|
storage/innobase/CMakeFiles/innobase.dir/build.make:1334: recipe for target 'storage/innobase/CMakeFiles/innobase.dir/lock/lock0wait.cc.o' failed
|
This appears to be caused by this change from MDEV-12674:
https://github.com/MariaDB/server/commit/ff166093741df0bd91ba24e02714ef882073c51b#diff-088335ea9de1d271e432c61d4c8c12e6L39
Adding the missing #include "sync0types.h" again fixes the issue.
- is caused by
-
MDEV-12674 Innodb_row_lock_current_waits has overflow
-
- Closed
-
- relates to
-
MDEV-13705 10.0.32 does not compile on architectures without 64-bit atomics
-
- Closed
-